cabal-version:      2.4
name:               crypto-katz-lindell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ben Selfridge
maintainer:         benselfridge@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Crypto
                      Crypto.Utils
                      Crypto.Types
                      Crypto.Schemes
                      Crypto.Attacks

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    extensions:       ScopedTypeVariables
    build-depends:    base,
                      array,
                      bv-sized,
                      combinat,
                      containers,
                      MonadRandom,
                      split
    hs-source-dirs:   src
    default-language: Haskell2010
