cabal-version:      2.4
name:               crypto-katz-lindell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ben Selfridge
maintainer:         benselfridge@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Crypto
                      Crypto.Utils
                      Crypto.Types
                      Crypto.Schemes
                      Crypto.Attacks

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: ScopedTypeVariables
    build-depends:      base,
                        array,
                        bv-sized,
                        combinat,
                        containers,
                        lens,
                        MonadRandom,
                        QuickCheck,
                        split
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite test-encrypt-decrypt
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    build-depends:    base,
                      bv-sized,
                      crypto-katz-lindell,
                      lens,
                      parameterized-utils,
                      QuickCheck,
                      tasty,
                      tasty-quickcheck
    default-language: Haskell2010