cabal-version:      2.4
name:               crypto-katz-lindell
version:            0.1.0.0
synopsis:           a data type for encryption schemes


-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Ben Selfridge
maintainer:         benselfridge@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Crypto
                      Crypto.Utils
                      Crypto.Types
                      Crypto.Schemes
                      Crypto.Attacks

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:   GADTs
                          RankNTypes
                          ScopedTypeVariables
                          TupleSections
    build-depends:        base,
                          array,
                          bv-sized,
                          bytestring,
                          combinat,
                          containers,
                          lens,
                          MonadRandom,
                          QuickCheck,
                          split
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite test-encrypt-decrypt
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    build-depends:    base,
                      bv-sized,
                      crypto-katz-lindell,
                      lens,
                      parameterized-utils,
                      QuickCheck,
                      tasty,
                      tasty-quickcheck
    default-language: Haskell2010